--- a/global.html
+++ b/global.html
@@ -35,10 +35,10 @@
                         <li class="spacer">&nbsp;</li>
                         <li class="selected-arrow">&#9650;</li>
                         <li class="vert-header">About</li>
-                        <li><a href="sponsors.html">Sponsors</a></li>
+                        <!--<li><a href="sponsors.html">Sponsors</a></li>-->
                         <li><a href="about.html">About us</a></li>
                         <li><a href="videos.html">Videos</a></li>
-                        <li><a href="media.html">Media</a></li>
+                        <!--<li><a href="media.html">Media</a></li>-->
                     </ul>
                 </li>
                 <li>
@@ -48,13 +48,47 @@
                         <li class="selected-arrow">&#9650;</li>
                         <li class="vert-header">Boards</li>
                         <li><a href="boardsmap.html">Map</a></li>
-                        <li><a href="boardsinfo.html">Info</a></li>
+                        <li><a href="boards.html">Info</a></li>
                     </ul>
                 </li>
-                <li><a class="horiz" href="blog.html">Blog</a></li>
+                <!--<li><a class="horiz" href="blog.html">Blog</a></li>-->
                 <li><a class="horiz selected" href="global.html">Global</a></li>
-                <li><a class="horiz" href="shop.html">Shop</a></li>
+                <!--<li><a class="horiz" href="shop.html">Shop</a></li>-->
             </ul>
+        </nav>
+
+        <nav class="mobile">
+
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <i class="glyphicon glyphicon-menu-hamburger"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                    <li><a href="home.html">Home</a></li>
+                    <li>
+                        <a href="why.html">Why?</a></li>
+                    <li><a href="safety.html">Safety</a></li>
+                    </li>
+                    <li><a href="about.html">About</a>
+                        <ul >
+                            <!--<li><a href="sponsors.html">Sponsors</a></li>-->
+                            <li><a href="about.html">About us</a></li>
+                            <li><a href="videos.html">Videos</a></li>
+                            <!--<li><a href="media.html">Media</a></li>-->
+                        </ul>
+                    </li>
+                    <li>
+                        <a  href="boards.html">Boards</a>
+                        <ul>
+                            <li><a href="boardsmap.html">Map</a></li>
+                            <li><a href="boards.html">Info</a></li>
+                        </ul>
+                    </li>
+                    <!--<li><a class="horiz" href="blog.html">Blog</a></li>-->
+                    <li><a href="global.html">Global</a></li>
+                </ul>
+            </div>
+
         </nav>
 
     </div>
@@ -63,9 +97,175 @@
 
 <div class="body-container">
 
-    global
+    <main class="global">
+
+        <section class="header">
+
+            <div class="text-area">
+                <img src="images/global-header-text.png" alt="The #2minutebeachclean around the globe">
+                <p>We work with various organisations around the world to spread the #2minutebeachclean message.</p>
+
+
+            </div>
+        </section>
+
+        <section class="intro">
+
+            <div class="text-container">
+                <h1>Our global campaign partners</h1>
+                <p>The #2minutebeachclean originates from the UK but the reach is global. We work with Blue Flag Operators, campaign groups and environmentalists to help us spread the message.</p>
+
+                <h2>Become a partner</h2>
+                <p>Want to start a #2minutebeachclean campaign in your country? <strong>Get in touch.</strong> </p>
+
+            </div>
+
+        </section>
+
+        <section class="filter">
+
+            <div class="filter-box">
+
+                <h1>Filter by country:</h1>
+
+                <div class="dropdown">
+                    <button  class="btn btn-lg btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        <span class="selected-item">Select Country</span>
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a id="IsraelOption">Israel</a></li>
+                        <li><a id="PuertoRicoOption">Puerto Rico</a></li>
+                        <li><a id="IrelandOption">Ireland</a></li>
+                        <!--<li><a id="NorthernIrelandOption">Northern Ireland</a></li>-->
+                        <!--<li><a id="WalesOption">Wales</a></li>-->
+                    </ul>
+                </div>
+            </div>
+
+            <div id="Israel" class="country-info">
+                <h1>Israel</h1>
+
+                <p>
+                    hic illo in laudantium magni officia, perferendis perspiciatis placeat sequi, suscipit voluptates voluptatibus.
+                    <br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur enim explicabo.
+                </p>
+
+                <a href="boardsmap.html">
+                    <button>Take me to the map</button>
+                </a>
+
+                <h2>Contact:</h2>
+
+                <p>
+                    ECOOCEAN <br>
+                    CONTACT: Orly Babitsky, Head of Operations<br>
+                    TELEPHONE: +972-4-6364268<br>
+                    Kibbutz sdot yam,<br>
+                    37804,<br>
+                    Israel<br>
+                </p>
+
+                <p>
+                    <a href="#">dowehaveawebaddress?</a>
+                </p>
+
+                <p>
+                    Hashtag: #2minutebeachclean / ???
+                </p>
+
+            </div>
+
+            <div id="PuertoRico" class="country-info">
+
+                <h1>Puerto Rico</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, blanditiis consequuntur dolorum eligendi, explicabo facere
+                    <br>
+                    impedit inventore, laborum mollitia natus nobis optio quaerat qui quidem sunt vel veniam voluptas voluptatibus.
+                </p>
+
+                <a href="boardsmap.html">
+                    <button>Take me to the map</button>
+                </a>
+
+
+                <h2>Contact:</h2>
+                <p>
+                    María Elena García, <br>
+                    Directora Ejecutiva <br>
+                    OPAS, Puerto Rico
+                </p>
+                <p>
+                    <a href="mailto:opaspuertorico@gmail.com">opaspuertorico@gmail.com</a>
+                </p>
+                <p>
+                    Hashtag: #2minutebeachclean / ????
+                </p>
+
+            </div>
+
+            <div id="Ireland" class="country-info">
+                <h1>Ireland</h1>
+                <p>
+                    The #2minutebeachclean campaign is run in Ireland by An Taisce’s Clean Coasts Programme. It has been active since 2014.<br>
+                    An Taisce have 20 beach clean stations around the coast with plans for 108 more in 2016.
+                </p>
+
+                <a href="boardsmap.html">
+                    <button>Take me to the map</button>
+                </a>
+
+                <h2>Contact:</h2>
+                <p>
+                    Sinead McCoy <br>
+                    Coastal Programmes Officer<br>
+                    Environmental Education Unit<br>
+                    An Taisce – The National Trust for Ireland<br>
+                    T:  +353 (0)1 4002210<br>
+                    E: <a href="mailto:smccoy@eeu.antaisce.org">smccoy@eeu.antaisce.org</a><br>
+                </p>
+                <p>
+                    <a href="http://www.blueflagireland.org" target="_blank">www.blueflagireland.org</a><br>
+                    <a href="http://www.cleancoastsireland.org">www.cleancoastsireland.org</a>
+                </p>
+                <p>
+                    Hashtag: #2minutebeachclean / #2minutebeachcleanireland
+                </p>
+            </div>
+
+        </section>
+
+
+        <section class="your-country">
+            <p>Want to run THE #2minutebeachclean campaign in your country? <strong>Get in touch</strong> </p>
+        </section>
+
+    </main>
 
 </div>
+
+<script>
+
+    var GlobalVM = ( function( window ) {
+
+        function activate() {
+
+            $('li a').click(function () {
+                $('.selected-item').text($(this).text());
+                $('.country-info').hide();
+                $('#' + $(this).attr('id').replace('Option', '')).fadeIn();
+            });
+        }
+
+        $(function () {
+            activate();
+        });
+
+    } )( window );
+
+</script>
 
 <footer>
 
@@ -95,14 +295,14 @@
         <div class="follow-us">Follow us</div>
 
         <div class="social-buttons">
-            <a class="instagram-button" href="#" ></a>
-            <a class="facebook-button" href="#" ></a>
-            <a class="twitter-button" href="#" ></a>
+            <a class="instagram-button" href="https://www.instagram.com/2minutebeachclean/" target="_blank" ></a>
+            <a class="facebook-button" href="https://www.facebook.com/2minutebeachclean" target="_blank" ></a>
+            <a class="twitter-button" href="https://twitter.com/2minbeachclean" target="_blank" ></a>
         </div>
 
         <div class="links">
             <a href="home.html">Home</a> | <a href="about.html">About</a> | <a href="boards.html">Boards</a> | <a href="blog.html">Blog</a> | <a
-                href="global.html">Global</a> | <a href="contact.html">Contact</a> | <a href="shop.html">Shop</a>
+                href="global.html">Global</a> | <a href="contact.html">Contact</a>
         </div>
 
         <div class="copyright">&copy; 2 Minute Beach Clean 2016</div>
