--- a/beachcleanday.html
+++ b/beachcleanday.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>#2minutebeachclean | Home</title>
+    <title>#2minutebeachclean | Contact</title>
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
             <ul class="menu" style="border: 0px solid green">
                 <li><a class="horiz" href="home.html">Home</a></li>
                 <li>
-                    <a class="horiz selected" href="why.html">Why?</a>
+                    <a class="horiz" href="why.html">Why?</a>
                     <ul style="margin-left: -37px;">
                         <li class="spacer">&nbsp;</li>
                         <li class="selected-arrow">&#9650;</li>
@@ -52,7 +52,7 @@
                     </ul>
                 </li>
                 <!--<li><a class="horiz" href="blog.html">Blog</a></li>-->
-                <li><a class="horiz" href="global.html">Global</a></li>
+                <li><a class="horiz selected" href="global.html">Global</a></li>
                 <!--<li><a class="horiz" href="shop.html">Shop</a></li>-->
             </ul>
         </nav>
@@ -68,7 +68,7 @@
                     <li>
                         <a href="why.html">Why?</a></li>
                     <li><a href="safety.html">Safety</a></li>
-                    </li>
+
                     <li><a href="about.html">About</a>
                         <ul >
                             <!--<li><a href="sponsors.html">Sponsors</a></li>-->
@@ -97,81 +97,32 @@
 
 <div class="body-container">
 
-    <main class="why">
+    <main class="beachcleanday">
 
         <section class="header">
 
-            <div class="text-area">
-                <img src="images/why-header-text.png" alt="">
-                <p>Every #2minutebeachclean makes a difference. But why is it so important to do it?</p>
-                <!--<a href="#intro">-->
-                    <!--<button>Find out more</button>-->
-                <!--</a>-->
-
+            <div class="text-area-centered">
+                <img src="images/beachcleanday-header-text.png" alt="June 11th is #2minutebeachclean day">
+                <p>Join us for the biggest #2minutebeachclean ever!</p>
             </div>
-
-            <!--<div class="text-area">-->
-                <!--<img src="images/why-header-text.png" alt="Why does it matter?">-->
-                <!--<p>Every #2minutebeachclean makes a difference. <br>-->
-                    <!--But why is it so important to do it?</p>-->
-                <!--<a href="#">-->
-                    <!--<button>Find out more</button>-->
-                <!--</a>-->
-
-            <!--</div>-->
         </section>
 
         <section class="intro">
 
             <div class="text-container">
-                <h1>Why your #2minutebeachclean makes a difference</h1>
 
-                <p>Aside from having a dirty beach with items on it that are a risk to our health and potentially damaging to the local economy, there are lots of very good reasons to remove plastic from the marine environment.</p>
-
-                <p>
-                    So while a 2 minute beach clean might seem insignificant in the grand scheme of things it is important. Every piece of plastic that you remove from the marine environment is no longer a danger to the animals that still live there. They won’t break down into micro plastics, strangle seabirds or mammals or end up being ingested.
-                </p>
-
-                <p>
-                    Also, consider your own wellbeing in this too. Beach cleaning gets you outside. It enables you to take care of nature and that brings a feeling of wellbeing. It helps you to understand your local patch –and enables you to understand how it’s doing - and it helps to keep you healthy and fit and feeling good. That’s important!
-                </p>
-
+                <p>On June 11th we’ll be down on the beach – or up a mountain, in a river or in the words – doing our #2minutebeachclean or #2minutelitterpick to celebrate our first ‘national’ day. The great thing about it is the fact that you don’t need any paperwork or insurance and there’s no set time. All you do is go out and do it! Pick up some litter for a couple of minutes and then snap it, tag it with #2minutebeachclean or #2minutelitterpick and bin it or recycle it to help make our world a nicer place.</p>
+                <p> 
+                    You might not think it will make much of a difference – and it may not on its own – but when you add them all together… that’s when good things start to happen.</p>
             </div>
 
         </section>
 
-        <section class="body">
-
-            <div class="content">
-
-                <h1>Why plastic doesn’t belong in the marine environment</h1>
-
-                <ul>
-                    <li>
-                        Old fishing nets and rope can entangle seals, sea birds, cetaceans and fish and kill them slowly. Reports of entanglement have shown to affect a 135 different marine species.
-                    </li>
-                    <li>
-                        Large nets can carry on fishing (we call this ghost fishing) forever and could kill all kinds of animals, from fish to whales, with no human to intervene and release them or haul them in. It is needless.
-                    </li>
-                    <li>
-                        Plastic doesn’t biodegrade like organic material and will just keep on breaking down into smaller and smaller pieces that could take hundreds, if not thousands of years to degrade. These small pieces can be eaten by wild life and may enter the food chain. Recent studies prove that even plankton can eat tiny plastic fragments.
-                    </li>
-
-                    <li>
-                        Plastics absorb harmful toxins in seawater that can accumulate up the food chain. Chemicals added to plastics during manufacturing to give them specific properties can also leach into the marine environment or organisms.
-                    </li>
-
-                    <li>
-                        Animals and birds mistake plastics for food and eat it. The example everyone always uses is turtles mistaking plastic bags for jellyfish. This plastic will stay in the animal’s stomach, as some species can’t regurgitate or pass it, and will eventually kill it.
-                    </li>
-                </ul>
-
-                <iframe width="818" height="455" src="https://www.youtube-nocookie.com/embed/c8zYjGid6t0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-
-
+        <section class="header2">
 
         </section>
+
+
 
     </main>
 
