--- a/boardsmap.html
+++ b/boardsmap.html
@@ -5,11 +5,12 @@
     <title>#2minutebeachclean | Home</title>
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css">
     <script src="libs/jquery/dist/jquery.min.js"></script>
     <script src="libs/bootstrap/dist/js/bootstrap.js"></script>
 
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <!--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBDUbFNWPFMqg3PkRP7icfWt1jDZmZCbic"></script>-->
 </head>
 <body>
 
@@ -22,7 +23,7 @@
             <ul class="menu" style="border: 0px solid green">
                 <li><a class="horiz" href="home.html">Home</a></li>
                 <li>
-                    <a class="horiz selected" href="why.html">Why?</a>
+                    <a class="horiz" href="why.html">Why?</a>
                     <ul style="margin-left: -37px;">
                         <li class="spacer">&nbsp;</li>
                         <li class="selected-arrow">&#9650;</li>
@@ -42,7 +43,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="horiz" href="boards.html">Boards</a>
+                    <a class="horiz selected" href="boards.html">Boards</a>
                     <ul style="margin-left: -30px;">
                         <li class="spacer">&nbsp;</li>
                         <li class="selected-arrow">&#9650;</li>
@@ -56,7 +57,6 @@
                 <!--<li><a class="horiz" href="shop.html">Shop</a></li>-->
             </ul>
         </nav>
-
         <nav class="mobile">
 
             <div class="dropdown">
@@ -97,85 +97,148 @@
 
 <div class="body-container">
 
-    <main class="why">
-
-        <section class="header">
-
-            <div class="text-area">
-                <img src="images/why-header-text.png" alt="">
-                <p>Every #2minutebeachclean makes a difference. But why is it so important to do it?</p>
-                <!--<a href="#intro">-->
-                    <!--<button>Find out more</button>-->
-                <!--</a>-->
-
-            </div>
-
-            <!--<div class="text-area">-->
-                <!--<img src="images/why-header-text.png" alt="Why does it matter?">-->
-                <!--<p>Every #2minutebeachclean makes a difference. <br>-->
-                    <!--But why is it so important to do it?</p>-->
-                <!--<a href="#">-->
-                    <!--<button>Find out more</button>-->
-                <!--</a>-->
-
-            <!--</div>-->
+    <main class="boards-map">
+        <section id="map" class="map">
+            <div id="map_canvas"></div>
         </section>
-
-        <section class="intro">
-
-            <div class="text-container">
-                <h1>Why your #2minutebeachclean makes a difference</h1>
-
-                <p>Aside from having a dirty beach with items on it that are a risk to our health and potentially damaging to the local economy, there are lots of very good reasons to remove plastic from the marine environment.</p>
-
-                <p>
-                    So while a 2 minute beach clean might seem insignificant in the grand scheme of things it is important. Every piece of plastic that you remove from the marine environment is no longer a danger to the animals that still live there. They won’t break down into micro plastics, strangle seabirds or mammals or end up being ingested.
-                </p>
-
-                <p>
-                    Also, consider your own wellbeing in this too. Beach cleaning gets you outside. It enables you to take care of nature and that brings a feeling of wellbeing. It helps you to understand your local patch –and enables you to understand how it’s doing - and it helps to keep you healthy and fit and feeling good. That’s important!
-                </p>
-
-            </div>
-
-        </section>
-
-        <section class="body">
-
-            <div class="content">
-
-                <h1>Why plastic doesn’t belong in the marine environment</h1>
-
-                <ul>
-                    <li>
-                        Old fishing nets and rope can entangle seals, sea birds, cetaceans and fish and kill them slowly. Reports of entanglement have shown to affect a 135 different marine species.
-                    </li>
-                    <li>
-                        Large nets can carry on fishing (we call this ghost fishing) forever and could kill all kinds of animals, from fish to whales, with no human to intervene and release them or haul them in. It is needless.
-                    </li>
-                    <li>
-                        Plastic doesn’t biodegrade like organic material and will just keep on breaking down into smaller and smaller pieces that could take hundreds, if not thousands of years to degrade. These small pieces can be eaten by wild life and may enter the food chain. Recent studies prove that even plankton can eat tiny plastic fragments.
-                    </li>
-
-                    <li>
-                        Plastics absorb harmful toxins in seawater that can accumulate up the food chain. Chemicals added to plastics during manufacturing to give them specific properties can also leach into the marine environment or organisms.
-                    </li>
-
-                    <li>
-                        Animals and birds mistake plastics for food and eat it. The example everyone always uses is turtles mistaking plastic bags for jellyfish. This plastic will stay in the animal’s stomach, as some species can’t regurgitate or pass it, and will eventually kill it.
-                    </li>
-                </ul>
-
-                <iframe width="818" height="455" src="https://www.youtube-nocookie.com/embed/c8zYjGid6t0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-
-
-
-        </section>
-
     </main>
 
 </div>
+
+<script>
+
+    var BoardsVM = ( function( window ) {
+
+        var map;
+        var bounds = new google.maps.LatLngBounds();
+        var loc;
+
+        function activate(){
+            handleItemClicked();
+            initialiseMap();
+
+        }
+
+
+
+        // map
+        function initialiseMap() {
+
+            var mapOptions = { draggable: false,
+                scrollwheel: false,
+                panControl: false,
+                mapTypeId: google.maps.MapTypeId.ROADMAP};
+            map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+
+            jQuery.support.cors = true;
+            $.ajax({
+                url: 'http://beachclean-dev.azurewebsites.net/api/boards',
+                type: 'GET',
+                dataType: 'json',
+                success: function (data) {
+                    data.forEach(function (beach) {
+
+                        loc = new google.maps.LatLng(beach.latitude, beach.longitude, beach);
+                        bounds.extend(loc);
+                        addMarker(loc, beach.beachName, "active", beach);
+                    });
+                    map.fitBounds(bounds);
+                    map.panToBounds(bounds);
+                }
+            });
+            map.fitBounds(bounds);
+            map.panToBounds(bounds);
+        }
+
+
+
+        var infowindow = new google.maps.InfoWindow({
+            content: name,
+            closeBoxURL: "/images/logo.png"
+        });
+
+        function addMarker(location, name, active, board) {
+            var marker = new google.maps.Marker({
+                position: location,
+                map: map,
+                title: name,
+                status: active
+            });
+
+            marker.addListener('click', function () {
+
+                var infoBoxContent = '';
+                infoBoxContent += '<div class="info-box">';
+
+                infoBoxContent += '<div style="font-weight:300; font-size: 150%;">' + name + '</div>';
+
+                if (board.beachPartner != null) {
+                    infoBoxContent += '<p><strong>Guardian: </strong>' + board.beachPartner + '</p>';
+                }
+
+                if (board.website != null) {
+                    infoBoxContent += '<p><strong>Website: </strong> <a href="' + board.website + '" target=_blank>' + board.website + '</a></p>';
+                }
+
+                if (board.website == null && board.contact != null) {
+                    infoBoxContent += '<p><strong>Contact: ' + board.contact + '</p>';
+                }
+                infoBoxContent += '</div>';
+                infowindow.setContent(infoBoxContent);
+                infowindow.open(map, marker);
+            });
+        }
+
+
+        // faq
+
+        function handleItemClicked() {
+            $('.item').click(function () {
+                // swap plus/minus image
+                var tempOtherImage = $(this).find('img').attr('src');
+                $(this).find('img').attr('src', $(this).find('img').attr('data-alt-img'));
+                $(this).find('img').attr('data-alt-img', tempOtherImage);
+                // toggle content show
+                $(this).find('p').fadeToggle('slow');
+            });
+        }
+
+        function myOtherMethod() {
+            alert( 'my other method' );
+        }
+
+
+        $(function () {
+            activate();
+        });
+
+
+        // explicitly return public methods when this object is instantiated
+        return {
+            //someMethod : myMethod,
+            someOtherMethod : myOtherMethod
+        };
+
+    } )( window );
+
+
+    var FooterVM = ( function( window ) {
+
+        function activate(){
+
+            $( "#signup" ).submit(function( event ) {
+                alert( "Handler for .submit() called." );
+                event.preventDefault();
+            });
+        }
+
+        $(function () {
+            activate();
+        });
+
+    } )( window );
+
+</script>
 
 <footer>
 
@@ -183,10 +246,10 @@
         <div class="join-the-movement">JOIN THE MOVEMENT, IT'S FREE.</div>
         <div class="why">For early bird offers and news, subscribe and join out tribe.</div>
 
-        <form [ngFormModel]="userForm" (submit)="onClickMe()" class="signup">
-            <input ngControl="name" id="name" type="text" placeholder="Your Name" required>
-            <input ngControl="email" id="email" type="email" placeholder="Your Email">
-            <button type="submit" [disabled]="!userForm.valid">SUBSCRIBE</button>
+        <form id="signup" class="signup">
+            <input id="name" type="text" placeholder="Your Name">
+            <input id="email" type="email" placeholder="Your Email">
+            <button type="submit" >SUBSCRIBE</button>
         </form>
     </section>
 
