--- a/shop.html
+++ b/shop.html
@@ -48,13 +48,47 @@
                         <li class="selected-arrow">&#9650;</li>
                         <li class="vert-header">Boards</li>
                         <li><a href="boardsmap.html">Map</a></li>
-                        <li><a href="boardsinfo.html">Info</a></li>
+                        <li><a href="boards.html">Info</a></li>
                     </ul>
                 </li>
-                <li><a class="horiz" href="blog.html">Blog</a></li>
+                <!--<li><a class="horiz" href="blog.html">Blog</a></li>-->
                 <li><a class="horiz" href="global.html">Global</a></li>
-                <li><a class="horiz selected" href="shop.html">Shop</a></li>
+                <!--<li><a class="horiz selected" href="shop.html">Shop</a></li>-->
             </ul>
+        </nav>
+
+        <nav class="mobile">
+
+            <div class="dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                    <i class="glyphicon glyphicon-menu-hamburger"></i>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                    <li><a href="home.html">Home</a></li>
+                    <li>
+                        <a href="why.html">Why?</a></li>
+                    <li><a href="safety.html">Safety</a></li>
+                    </li>
+                    <li><a href="about.html">About</a>
+                        <ul >
+                            <li><a href="sponsors.html">Sponsors</a></li>
+                            <li><a href="about.html">About us</a></li>
+                            <li><a href="videos.html">Videos</a></li>
+                            <li><a href="media.html">Media</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a  href="boards.html">Boards</a>
+                        <ul>
+                            <li><a href="boardsmap.html">Map</a></li>
+                            <li><a href="boards.html">Info</a></li>
+                        </ul>
+                    </li>
+                    <!--<li><a class="horiz" href="blog.html">Blog</a></li>-->
+                    <li><a href="global.html">Global</a></li>
+                </ul>
+            </div>
+
         </nav>
 
     </div>
@@ -95,14 +129,14 @@
         <div class="follow-us">Follow us</div>
 
         <div class="social-buttons">
-            <a class="instagram-button" href="#" ></a>
-            <a class="facebook-button" href="#" ></a>
-            <a class="twitter-button" href="#" ></a>
+            <a class="instagram-button" href="https://www.instagram.com/2minutebeachclean/" target="_blank" ></a>
+            <a class="facebook-button" href="https://www.facebook.com/2minutebeachclean" target="_blank" ></a>
+            <a class="twitter-button" href="https://twitter.com/2minbeachclean" target="_blank" ></a>
         </div>
 
         <div class="links">
             <a href="home.html">Home</a> | <a href="about.html">About</a> | <a href="boards.html">Boards</a> | <a href="blog.html">Blog</a> | <a
-                href="global.html">Global</a> | <a href="contact.html">Contact</a> | <a href="shop.html">Shop</a>
+                href="global.html">Global</a> | <a href="contact.html">Contact</a>
         </div>
 
         <div class="copyright">&copy; 2 Minute Beach Clean 2016</div>
